* remove ussb1 from Acurite-6045M. thanks to rct/n7qnm #81
* add support for WS2032. rain may not be correct. thanks to raadi...@gmail.com 
* update identifier for Acurite-6045M to the new style SDR.
* update identifier for Fineoffset-WHx080 to the new style SDR. thanks to W11T #97
* update identifier for HIDEKI-TS04 to the new style SDR.

0.78 06jun2020
* updated packet formats for Oregon Scientific WMR100N. -tk
* corrected wind speed for Acurite5n1PacketV2. -tk

0.77 06feb2020
* revert the rtl_433 to rtl changes
* update identifier for Ambient Weather F007TH
* added support for fine offset rain gauge (rtl_433 calls it EcoWitt-WH40)
* deal with more changes to acurite 5n1 packet format from rtl_433

0.76 04feb2020
* use rtl instead of rtl_433 to match rtl_433 project change
* stop using -G in default command, since it is now officially just for testing
* encourage use of -R instead of -G, as requested by rtl_433 project

0.75 02jan2020
* fixed unit system bug in OSWGR800 packet.  thanks to user olivier!

0.74 22dec19
* added support for TS-FT002.  thanks to user splobsterman!

0.73 14dec19
* added support for acurite atlas packets.  thanks to user Chris Morris!

0.72 02dec19
* added support for TFATwinPlus303049.  thanks to user weezul!
* added support for acurite rain 899.  thanks to user rknobbe!
* convert units for rain in fine offset 1080/3080 packets

0.71 01dec19
* added support for HolmanWS5029. thanks to user rmounce!
* changed labels for pm10 from pm10_ug_m3 to pm10_0_ug_m3
* added support for rain_mm, wind_speed_mph, wind_direction, wind_gust in
   Hideki rain and wind packets.  thanks to user giuseppe saia/farmabeps,
   and user andylittle.  fixes issue #67
* change acurite 986 parse text to match parse json.  thanks to andylittle!
* added support for OSUVR128.  thanks to user sirrated!
* added support for unsupported acurite tower and 5in1 packets that include
   rssi, frequency, and snr.  thanks to user networkname!  issue #59